tests/diag/dym_type.err
tests/diag/dym_type.hi:5: error: unknown type 'Pointt'; did you mean 'Point'?
     5 |     q: Pointt = p
