tests/diag/dym_type.ty
struct Point:
    x: int
fn main():
    p := Point(1)
    q: Pointt = p
    print(str(q.x))
